--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.31.1",
+    "sqlite3": "^5.1.6",
     "telegraf-session-local": "^2.1.1"
   },
   "devDependencies": {
